classDiagram
direction BT
class Adresse {
    Long  id
    String  cpostal
    String  rue
    String  ville
}
class Parrain {
    String  deplacement
    String  disponibilite
    String  expertise
    Boolean  isActive
    Integer  maxProjects
    String  parcours
}
class Plateforme {
    Long  id
    String  email
    String  nom
    String  telephone
}
class Porteur {
    String  disponibilite
}
class Projet {
    Long  id
    String  description
    LocalDate  startingDate
    String  title
}
class Utilisateur {
    Long  id
    String  email
    boolean  enabled
    String  firstname
    String  lastname
    String  password
    String  profilePicture
    UserRole  role
    String  username
}

Parrain "0..1" --> "0..1" Adresse 
Parrain "0..*" <--> "0..1" Plateforme 
Parrain "0..1" <--> "0..*" Projet 
Plateforme "0..1" --> "0..1" Adresse 
Porteur "0..1" --> "0..1" Adresse 
Porteur "0..*" <--> "0..1" Plateforme 
Porteur "0..1" <--> "0..1" Projet 
Utilisateur "0..1" --> "0..1" Adresse 
Utilisateur "0..*" <--> "0..1" Plateforme 
